Fix avatar centering on mobile, add Sign Up to nav bar

--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -71,4 +71,8 @@
   -o-transition: all .55s ease;
   transition: all .55s ease;
 }
-
+.signup-btn{
+  background: $highlight;
+  padding: .5em 1em;
+  color: $light !important;
+}
