--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -214,6 +214,12 @@ hr {
 			    &:hover {
 			    	background: $highlight;
 			    }
+  			}
+  			img {
+  				margin: 0 auto;
+    			display: block;
+    			margin-top: 1em;
+    			border-radius: 50%;
   			} 
   		}	
 	}
